<resources>
    <string name="app_name">Merdeka Belanja</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="str_books">Books</string>
    <string name="btnContinue">continue</string>
    <string name="clothing_amp_accessories">Clothing &amp; Accessories</string>
    <string name="electronics">Electronics</string>
    <string name="full_name">Full Name</string>
    <string name="navigation_close">Close navigation drawer</string>
    <string name="navigation_open">Open navigation drawer</string>
    <string name="other_products">Other Products</string>
    <string name="str_about">About</string>
    <string name="str_about_this_product">About this product</string>
    <string name="str_account">Account</string>
    <string name="str_add_cart">Add Cart</string>
    <string name="str_add_photo">Add Photo</string>
    <string name="str_add_product">Add Product</string>
    <string name="str_address">Address</string>
    <string name="str_admin_id">Admin ID</string>
    <string name="str_admin_login">Admin Login</string>
    <string name="str_all_category">All Category</string>
    <string name="str_all_divisions">All Divisions</string>
    <string name="str_already_a_member_login_here">Already a Member? Login Here</string>
    <string name="str_author">Author</string>
    <string name="str_book">Book</string>
    <string name="str_book_title">Book title</string>
    <string name="str_book_type">Book type</string>
    <string name="str_brand">Brand</string>
    <string name="str_brand_name">Brand Name</string>
    <string name="str_buy_now">Buy Now</string>
    <string name="str_by_program_studi_independen">By Program Studi Independen</string>
    <string name="str_category">Category</string>
    <string name="str_close">Close</string>
    <string name="str_clothing">Clothing</string>
    <string name="str_clothing_amp_accessories">Clothing &amp; Accessories></string>
    <string name="str_clothing_type">Clothing Type</string>
    <string name="str_colors">Colors</string>
    <string name="str_confirmation_password">Confirmation Password</string>
    <string name="str_contact_us">Contact Us:</string>
    <string name="str_create_account">Create Account</string>
    <string name="str_dashboard">Dashboard</string>
    <string name="str_data">Data</string>
    <string name="str_delete">Delete</string>
    <string name="str_descriptions">Descriptions</string>
    <string name="str_destination_address">Destination Address</string>
    <string name="str_division">Division</string>
    <string name="str_divisions">Divisions</string>
    <string name="str_e_mail_address">E-mail Address</string>
    <string name="str_edit">Edit</string>
    <string name="str_electronic">Electronic</string>
    <string name="str_electronic_type">Electronic type</string>
    <string name="str_electronics">Electronics</string>
    <string name="str_filter">Filter</string>
    <string name="str_full_name">Full Name</string>
    <string name="str_gender">Gender</string>
    <string name="str_help">Help</string>
    <string name="str_home">Home</string>
    <string name="str_img_otp">img otp</string>
    <string name="str_kampus_merdeka_hacktiv8">Kampus Merdeka Hacktiv8</string>
    <string name="str_latest_update">Latest Update</string>
    <string name="str_log_in">Log in</string>
    <string name="str_logout">Logout</string>
    <string name="str_lorem">Lorem Ipsum is fdsf dsfsimply dummy textfdsf dsfsimply dummy textfdsf dsfsimply dummy textfdsf dsfsimply dummy textfdsf dsfsimply dummy textfdsf dsfsimply dummy textfdsf dsfsimply dummy textfdsf dsfsimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="str_me">Me</string>
    <string name="str_my_info">My Info</string>
    <string name="str_new_user_register_here">New User? Register Here</string>
    <string name="str_number_of_page">Number of page</string>
    <string name="str_order_address">Order Address</string>
    <string name="str_other">Other</string>
    <string name="str_other_products">Other Products</string>
    <string name="str_others">Others</string>
    <string name="str_password">Password</string>
    <string name="str_phone_number_password">Phone number, password</string>
    <string name="str_photo_name_email_address">Photo, name, email, address</string>
    <string name="str_piece">Piece</string>
    <string name="str_please_white_0_second_for_send_again">Please white 0 second for send again.</string>
    <string name="str_print_card">Print Card</string>
    <string name="str_product_info">Product info</string>
    <string name="str_product_name">Product Name</string>
    <string name="str_products">Products</string>
    <string name="str_publisher">Publisher</string>
    <string name="str_publisher_year">Publisher year</string>
    <string name="str_quantity">Quantity</string>
    <string name="str_register">Register</string>
    <string name="str_register_staff">Register Staff</string>
    <string name="str_remove_photo">Remove Photo</string>
    <string name="str_reset_password">reset password</string>
    <string name="str_saves">Saves</string>
    <string name="str_search">Search</string>
    <string name="str_settings">Settings</string>
    <string name="str_sign_in_amp_security"><![CDATA[Sign-In & Security]]></string>
    <string name="str_sizes">Sizes</string>
    <string name="str_staff_id">Staff ID</string>
    <string name="str_staff_login">Staff Login</string>
    <string name="str_staffs">Staffs</string>
    <string name="str_status">Status</string>
    <string name="str_profile">\t\tProfile</string>
    <string name="str_team_member_2">Team Member 2</string>
    <string name="str_the_one_final_destination_for_your_needs">The one final destination for your needs</string>
    <string name="str_user_id">User ID</string>
    <string name="str_username">Username</string>
    <string name="str_users">Users</string>
    <string name="str_we_wish_you_a_happy_working_day">We wish you a happy working day</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="textOTP">verify +62XXXXXXXXX</string>
    <string name="textOtpMessage">Enter the OTP code to verify your phone number</string>
    <string name="str_profile_message">Please set your name and an optional profil image</string>
    <string name="str_verify">verify your phone number</string>
    <string name="str_verify_message">Naon App will send an SMS message to verify your phone number</string>
    <string name="str_title_activity_settings">SettingsActivity</string>
    <string name="str_phone_number">Phone Number</string>
    <string name="str_add_staff">Add Staff</string>
    <string name="str_add_products">Add Products</string>
    <string name="str_my_cart">My Cart</string>
    <string name="str_purchase_history">Purchase History</string>
    <string name="str_costumer_services">Costumer Services</string>
    <string name="storage_permission_available">Storage permission is available. Starting process.</string>
    <string name="storage_unavailable"><b>Storage could not be opened.</b>\nThis occurs when the storage is not available (for example it is already in use) or if the system has denied access (for example when storage access has been disabled).</string>
    <string name="storage_access_required">Storage access is required to access storage.</string>
    <string name="ok">OK</string>
    <string name="str_remove">Remove</string>
    <string name="str_instagram">http://instagram.com/nuryadin.cjr</string>
    <string name="str_github">http://linkedin.com/in/nuryadin-abutani-8b38b2195</string>
    <string name="str_linkedin">http://github.com/nuryadincjr</string>

</resources>