<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itemSaves"
        android:icon="@drawable/ic_save"
        android:title="@string/str_saves"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/itemClose"
        android:icon="@drawable/ic_close"
        android:title="@string/str_close"
        app:showAsAction="always"/>

    <item
        android:id="@+id/itemEdit"
        android:icon="@drawable/ic_archive"
        android:title="@string/str_edit"
        app:showAsAction="never"/>

    <item
        android:id="@+id/itemDelete"
        android:icon="@drawable/ic_trash"
        android:title="@string/str_delete"
        app:showAsAction="never"/>

    <item
        android:id="@+id/itemPrint"
        android:icon="@drawable/ic_brand"
        android:title="@string/str_print_card"
        app:showAsAction="never"/>
</menu>