<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itemHome"
        android:enabled="true"
        app:showAsAction="withText"
        android:icon="@drawable/ic_outline_home"
        android:title="@string/str_home" />
    <item
        android:id="@+id/itemCategories"
        android:enabled="true"
        app:showAsAction="withText"
        android:icon="@drawable/ic_outline_category"
        android:title="@string/str_category" />
    <item
        android:id="@+id/itemAccount"
        android:enabled="true"
        app:showAsAction="withText"
        android:icon="@drawable/ic_outline_account"
        android:title="@string/str_me" />
</menu>