<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itemSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/str_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/itemFilter"
        android:icon="@drawable/ic_filter"
        android:title="@string/str_filter"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/itemFilter0"
                android:checkable="true"
                android:titleCondensed="All"
                android:title="@string/str_all_divisions"
                app:actionViewClass="android.widget.CheckBox"
                app:showAsAction="collapseActionView|withText" />
        </menu>
    </item>

</menu>