<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminacitvity.ProductsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/llClothing"
                    style="@style/LayoutWidthHeightMW.LinearLayoutAdmin"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        style="@style/LayoutWidthHeightMW.TextViewAdmin"
                        android:text="@string/str_clothing" />

                    <ImageView
                        style="@style/ImageViewAdmin"
                        android:src="@drawable/clothing"
                        android:contentDescription="@string/app_name" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llBooks"
                    style="@style/LayoutWidthHeightMW.LinearLayoutAdmin"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        style="@style/LayoutWidthHeightMW.TextViewAdmin"
                        android:text="@string/str_books" />

                    <ImageView
                        style="@style/ImageViewAdmin"
                        android:src="@drawable/books"
                        android:contentDescription="@string/app_name" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/llElectronic"
                    style="@style/LayoutWidthHeightMW.LinearLayoutAdmin"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        style="@style/LayoutWidthHeightMW.TextViewAdmin"
                        android:text="@string/str_electronics" />

                    <ImageView
                        style="@style/ImageViewAdmin"
                        android:src="@drawable/electronic"
                        android:contentDescription="@string/app_name" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llOther"
                    style="@style/LayoutWidthHeightMW.LinearLayoutAdmin"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        style="@style/LayoutWidthHeightMW.TextViewAdmin"
                        android:text="@string/str_others" />

                    <ImageView
                        style="@style/ImageViewAdmin"
                        android:src="@drawable/other_product"
                        android:contentDescription="@string/app_name" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>