<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usersfragment.UserProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:paddingTop="30dp">

                <ImageView
                    android:id="@+id/ivPhoto"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_brand"
                    android:contentDescription="@string/app_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvName"
                        style="@style/LayoutWidthHeightMW.ListItemView"
                        tools:text="Nuryadin Abutani" />

                    <TextView
                        android:id="@+id/tvPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="+6281541181633" />
                </LinearLayout>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/llMyChart"
                        style="@style/LinearLayoutItem"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            style="@style/ImageViewCenter"
                            android:src="@drawable/ic_brand"
                            android:contentDescription="@string/str_my_cart" />

                        <TextView
                            style="@style/LayoutWidthHeightMM.TextViewLabel"
                            android:text="@string/str_my_cart" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llPurchaseHistory"
                        style="@style/LinearLayoutItem"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            style="@style/ImageViewCenter"
                            android:src="@drawable/ic_history"
                            android:contentDescription="@string/str_purchase_history" />

                        <TextView
                            style="@style/LayoutWidthHeightMM.TextViewLabel"
                            android:text="@string/str_purchase_history" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llCostumerServices"
                        style="@style/LinearLayoutItem"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            style="@style/ImageViewCenter"
                            android:src="@drawable/ic_chat"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            style="@style/LayoutWidthHeightMM.TextViewLabel"
                            android:text="@string/str_costumer_services"/>
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/llMyInfo"
                style="@style/LayoutWidthHeightMW.LinearLayoutItemSetting">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_twotone_account"
                    android:contentDescription="@string/app_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_my_info"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/str_photo_name_email_address" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSign"
                style="@style/LayoutWidthHeightMW.LinearLayoutItemSetting">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_twotone_security"
                    android:contentDescription="@string/app_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_sign_in_amp_security"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/str_phone_number_password" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAbout"
                style="@style/LayoutWidthHeightMW.LinearLayoutItemSetting"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_twotone_info_24"
                    android:contentDescription="@string/app_name" />

                <TextView
                    style="@style/LayoutWidthHeightMM.TextViewItemSetting"
                    android:text="@string/str_about" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLogout"
                style="@style/LayoutWidthHeightMW.LinearLayoutItemSetting"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_twotone_arrow"
                    android:contentDescription="@string/app_name" />

                <TextView
                    style="@style/LayoutWidthHeightMM.TextViewItemSetting"
                    android:text="@string/str_logout"
                    android:textColor="@color/red"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>