<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".adminfragment.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/llAddStaff"
                style="@style/LayoutWidthHeightMW.LinearLayoutAdmin"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/tvAddStaff"
                    style="@style/LayoutWidthHeightMW.TextViewAdmin"
                    android:text="@string/str_add_staff" />

                <ImageView
                    android:id="@+id/ivAddStaff"
                    style="@style/ImageViewAdmin"
                    android:src="@drawable/staffs"
                    android:contentDescription="@string/app_name" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAddStock"
                style="@style/LayoutWidthHeightMW.LinearLayoutAdmin"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/tvAddStock"
                    style="@style/LayoutWidthHeightMW.TextViewAdmin"
                    android:text="@string/str_add_products"/>

                <ImageView
                    android:id="@+id/ivAddStock"
                    style="@style/ImageViewAdmin"
                    android:src="@drawable/other_product"
                    android:contentDescription="@string/app_name" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>